--- a/res/layout/activity_alarm.xml
+++ b/res/layout/activity_alarm.xml
@@ -2,9 +2,25 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ffffffff"
     android:orientation="vertical" >
-    
-<ListView android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/alarm_listview"></ListView>
+
+    <include
+        android:id="@+id/alarmtoolbar"
+        layout="@layout/toolbar" />
+
+    <TextView
+        android:id="@+id/alarmnameview"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:gravity="center"
+        android:textColor="@color/Black"
+        android:textSize="50sp" />
+
+    <ListView
+        android:id="@+id/alarm_listview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+    </ListView>
+
 </LinearLayout>
