--- a/res/layout/alarm_listview_item.xml
+++ b/res/layout/alarm_listview_item.xml
@@ -35,10 +35,11 @@
         android:id="@+id/delete_city_btn"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:gravity="center_vertical"
+        android:gravity="center"
         android:layout_weight="3"
         android:text="删除"
         android:textSize="15sp"
+        android:background="#ffe3e3e3"
         android:singleLine="true"
         android:textColor="@color/Black" />
 
