--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,34 +1,38 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
+        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
-    <style name="AppBaseTheme" parent="android:Theme.Light">
+    <style name="AppBaseTheme" parent="Theme.AppCompat">
         <!--
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
+            backward-compatibility can go here.
         -->
     </style>
 
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
+
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
     </style>
 
-    
-     <style name="textView">
+    <style name="textView">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">1</item>
-        <item name="android:layout_margin">1dp</item>
+        <item name="android:layout_margin">5dp</item>
+        <item name="android:gravity">center</item>
         <item name="android:textSize">16sp</item>
-        <item name="android:background">#ffeeffff</item>
+        <item name="android:background">#ff88ffff</item>
     </style>
 
     <style name="showactivityfont" parent="android:Widget.Holo.Light.TextView">
         <item name="android:textColor">@color/Black</item>
         <item name="android:textSize">40sp</item>
     </style>
+
 </resources>
